Release notes
#############

In development
==============

- Added support for min+max+hist and restart to StatAccum.
- Added support for exact and block kriging to OCK.
- Added sill and range to linear variogram model in kriging.
- Added constraints to variogram model fit.
- Added color.discretize_cmap.
- Added Plot.add_water_mark.
- Added units.basic_proj.
- Added systematic cleaning to cache_map().
- Added [vacumm.misc.grid.basemap]max_cache_size config option.
- Added cellerr method to regrid1d.
- Added time arguments support if applicable to Plot.add_point().
- Added dstwgt method for fortran interpolators from gridded to random points.
- Added tuple support for time creation routines of atime.
- New regrid2d with tool and method keywords.
- Fixed: default params in get_proj.
- Fixed names of module attributes which are now upper case.
- Fixed: list_forecast_files, Plot.add_lon/lat, _interp_.linept, Plot2D.fill.
- Fixed: ConfigManager.opt_parse.

Version 2.5.4
=============

- Added "make safedoc" target.
- Fixed: english translations++.
- Fixed: missing test_plot_add_logo.py.
- Fixed: multifit+multiproc in kriging.
- Fixed: ConfigManager.arg_parse helps.
- Fixed: station_info import of oldnumeric.

Version 2.5.1
=============

- Changed: module level config files renamed to vacumm.cfg.
- Fixed: access to vacumm_nice_gfdl and vacumm_ssec colormaps.
- Fixed: Logger and specs for Profile.
- Fixed: add_logo.
- Fixed: removed dependency to pytz, which must now be installed
  to add time zone support to vacumm.

Version 2.5.0
==============

- Added: camp_nice_gfdl colormap.
- Added: Plot.add_annotation.
- Added: misc.plot.advanced.add_things tutorial.
- Fixed: gen_gallery.

Version 2.4.2
==============

- Added: misc.isempty.
- Fixed: cfg2rst, ConfigManager, StepsNorm.

Version 2.4.1
==============

- Upgraded: Logger.
- Added: docversions sphinx extension.
- Fixed: ConfigManager.opt_parse/arg_parse, Shapes, get_proj, get_xy,